--- a/index.html
+++ b/index.html
@@ -1,3 +1,316 @@
-index for rau4t.com
-hosted on rau4t.github.io
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Gurucore Lockevn">
 
+    <title>Rau4T.com fresh and clean vegetables for children</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+            <li class="sidebar-brand">
+                <a href="#top"  onclick = $("#menu-close").click(); >Rau4T.com</a>
+            </li>
+            <li>
+                <a href="#top" onclick = $("#menu-close").click(); >Home</a>
+            </li>
+            <li>
+                <a href="#about" onclick = $("#menu-close").click(); >Chúng tớ là ai</a>
+            </li>
+            <li>
+                <a href="#services" onclick = $("#menu-close").click(); >Sản phẩm</a>
+            </li>
+            <li>
+                <a href="#portfolio" onclick = $("#menu-close").click(); >Các hoạt động</a>
+            </li>
+            <li>
+                <a href="#contact" onclick = $("#menu-close").click(); >Liên hệ</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!-- Header -->
+    <header id="top" class="header">
+        <div class="text-vertical-center">
+            <h1>Rau4T.com</h1>
+            <h3>Nông sản sạch cho bé yêu ăn, tươi, tiện, tinh tuyển</h3>
+            <br>            
+            <a href="http://shop.rau4t.com" class="btn btn-lg btn-dark">Quá cool, đặt hàng luôn!</a>
+        </div>
+    </header>
+
+    <!-- About -->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Chúng tớ là những ông bố bà mẹ bức xúc về nguồn thực phẩm sạch cho con!</h2>
+                    <p class="lead">Chúng tớ có trình độ (thực phẩm, cây trồng, ...). Do vậy, chúng tớ hành động, <a target="_blank" href="https://www.facebook.com/pham.t.thuy.12/posts/10207380934616179">tự trồng tự sản xuất</a> tự tay chăm sóc cho những bé thân yêu là cách an tâm nhất. Trong khả năng của mình, chúng tớ cũng muốn giúp những bố mẹ khác bớt lo lắng về thực phẩm cho bé yêu.</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <!-- Services -->
+    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
+    <section id="services" class="services bg-primary">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2>Sản phẩm hiện có</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-tree fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Rau hàng ngày</strong>
+                                </h4>
+                                <p>Cải, dền cơm, cải bắp, ...</p>
+                                <a href="https://www.facebook.com/rau4T/photos" class="btn btn-light">Xem thêm</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-leaf fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Rau gia vị</strong>
+                                </h4>
+                                <p>Hành, tía tô, mùi ...</p>
+                                <a href="https://www.facebook.com/rau4T/photos" class="btn btn-light">Xem thêm</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-paw fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Thịt</strong>
+                                </h4>
+                                <p>Gà mái, gà trống, lợn</p>
+                                <a href="https://www.facebook.com/rau4T/photos" class="btn btn-light">Xem thêm</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-egg fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Trứng</strong>
+                                </h4>
+                                <p>Trứng gà</p>
+                                <a href="https://www.facebook.com/rau4T/photos" class="btn btn-light">Xem thêm</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <!-- Callout -->
+    <aside class="callout">
+        <div class="text-vertical-center">
+            <h1>Chính các con tớ đang được chén ngon lành hàng ngày!</h1>
+        </div>
+    </aside>
+
+    <!-- Portfolio -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>Hoạt động hiện tại</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                    <a href="https://www.facebook.com/rau4T/photos" class="btn btn-dark">Tìm hiểu thêm</a>
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <!-- Call to Action -->
+    <aside class="call-to-action bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3>Bạn muốn tìm hiểu gì không?</h3>
+                    <a href="http://shop.rau4t.com" class="btn btn-lg btn-dark">Khỏi, cho đặt hàng luôn!</a>
+                    <a href="https://www.facebook.com/rau4T" class="btn btn-lg btn-light">Tham khảo thêm!</a>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <p>Shop: 172E Quán Thánh, Ba Đình, HN</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-phone fa-fw"></i> (0979) 2615 ba sáu</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </aside>
+
+    <!-- Map -->
+    <section id="contact" class="map">
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d930.9374900259419!2d105.83985394520933!3d21.042688448146762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135aba55c69058b%3A0xe90ff10f54d3d587!2zMTcyIFF1w6FuIFRow6FuaCwgQmEgxJDDrG5oLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1493024555979"></iframe>        
+        <br />
+        <small>
+            <a href="https://www.google.com/maps/@21.0430164,105.838883,21z?hl=en"></a>
+        </small>
+        </iframe>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h4><strong>Rau4T</strong>
+                    </h4>
+                    <p>Ruộng: Chúc Sơn<br>Chương Mỹ, HN</p>
+                    <p>Shop: 172E Quán Thánh, Ba Đình, HN</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-phone fa-fw"></i> (0979) 2615 ba sáu</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:rau4Tcom@gmail.com">rau4Tcom@gmail.com</a>
+                        </li>
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="https://www.facebook.com/rau4T"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                        </li>                        
+                        <li>
+                            <a href="#"><i class="fa fa-pinterest fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                        </li>
+                    </ul>
+                    <hr class="small">
+                    <p class="text-muted">Copyright &copy; Rau4T.com 2016 - <span class="codeCurrentYear"></span></p>
+                    <p class="text-muted">Powered by Gurucore.com 2016</p>                    
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script>
+    // Closes the sidebar menu
+    $("#menu-close").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });
+
+    // Opens the sidebar menu
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });
+
+    // Scrolls to the selected menu item on the page
+    $(function() {
+        $('a[href*=#]:not([href=#])').click(function() {
+            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+
+                var target = $(this.hash);
+                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                if (target.length) {
+                    $('html,body').animate({
+                        scrollTop: target.offset().top
+                    }, 1000);
+                    return false;
+                }
+            }
+        });
+    });
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $(".codeCurrentYear").text(new Date().getFullYear());
+        });
+    </script>
+</body>
+
+</html>
