--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Rau4T.com 2016 - <span class="codeCurrentYear"></span></p>
-                    <p class="text-muted">Powered by Gurucore.com 2016</p>                    
+                    <p class="text-muted">Developed by Gurucore.com 2016</p>                    
                 </div>
             </div>
         </div>
