change url scheme

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1>Rau4T.com</h1>
             <h3>Nông sản sạch cho bé yêu ăn, tươi, tiện, tinh tuyển</h3>
             <br>            
-            <a href="http://shop.rau4t.com" class="btn btn-lg btn-dark">Quá cool, đặt hàng luôn!</a>
+            <a href="//shop.rau4t.com" class="btn btn-lg btn-dark">Quá cool, đặt hàng luôn!</a>
         </div>
     </header>
 
@@ -211,7 +211,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Bạn muốn tìm hiểu gì không?</h3>
-                    <a href="http://shop.rau4t.com" class="btn btn-lg btn-dark">Khỏi, cho đặt hàng luôn!</a>
+                    <a href="//shop.rau4t.com" class="btn btn-lg btn-dark">Khỏi, cho đặt hàng luôn!</a>
                     <a href="https://www.facebook.com/rau4T" class="btn btn-lg btn-light">Tham khảo thêm!</a>
                 </div>
                 <div class="col-lg-12 text-center">
