--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Rau4T vegetables meat pork beef fruit farmer fresh">
     <meta name="author" content="Gurucore Lockevn">
 
     <title>Rau4T.com fresh and clean vegetables for children</title>
@@ -16,7 +16,7 @@
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -261,8 +261,8 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Rau4T.com 2016 - <span class="codeCurrentYear"></span></p>
-                    <p class="text-muted">Developed by Gurucore.com 2016, hosted by Github</p>                    
+                    <p class="text-muted">Built by Rau4T.com 2016 - <span class="codeCurrentYear"></span></p>
+                    <p class="text-muted">Developed by <a href="http://gurucore.com">Gurucore.com</a> 2016, on Github</p>                    
                 </div>
             </div>
         </div>
